--- a/project4.html
+++ b/project4.html
@@ -115,19 +115,22 @@
     
     <div class="project-overview">
         <h2>Shoot the Pictures</h2>
-            <p> To morph two images, we need to select points of correspondences. I used the given tool to select points on the images. After defining the correspondences, I used Delaney Triangulation to triangulate the mean points of Larry David's and Can Ruso's images to find the mean shape. </p>
-            <div class="image-grid">
+            <p> Here are the pictures I used for this project: </p>
+            <div class="image-gri">
             <div class="image-container">
-                <img src="proj3images/ruso_tr.png" alt="d_x.jpg">
-                <p class="image-subtitle">Ruso points</p>
+                <img src="proj4images/IMG_5854.png" alt="taj.jpg">
             </div>
             <div class="image-container">
-                <img src="proj3images/david_tr.png" alt="d_y.jpg">
-                <p class="image-subtitle">David points</p>
+                <img src="proj4images/IMG_5855.png" alt="taj_sharp.jpg">
             </div>
             <div class="image-container">
-                <img src="proj3images/mid_tr.png" alt="magnitude.jpg">
-                <p class="image-subtitle">Mean points on Can Ruso</p>
+                <img src="proj4images/img3-1.png" alt="taj.jpg">
+            </div>
+            <div class="image-container">
+                <img src="proj4images/img3-3.png" alt="taj_sharp.jpg">
+            </div>
+            <div class="image-container">
+                <img src="proj4images/mid_tr.png" alt="magnitude.jpg">
             </div>
         </div>
         <div class="clear-float"></div>
