--- a/project4.html
+++ b/project4.html
@@ -243,6 +243,15 @@
         </div>
         </div>
         <p> Here are other examples of mosaicing with their original images, mask, and the final blended image:</p>
+        <div class="image-gri">
+        <div class="image-container">
+            <img src="proj4images/img3-1.png" alt="taj.jpg">
+        </div>
+        <div class="image-container">
+            <img src="proj4images/img3-3.png" alt="taj_sharp.jpg">
+        </div>
+        </div>
+        <div class="clear-float"></div>
         <div class="image-grid">
         <div class="image-container">
             <img src="proj4images/mask3-1.png" alt="taj.jpg">
@@ -253,20 +262,38 @@
         <div class="image-container">
             <img src="proj4images/mask3-3.png" alt="taj_sharp.jpg">
         </div>
+        </div>        
+        <div class="clear-float"></div>
+        <div class="image">
+        <div class="image-container">
+        <img src="proj4images/img3_ful.png" alt="taj.jpg">
+        </div>
         </div>
         <div class="clear-float"></div>
         <div class="image-gri">
         <div class="image-container">
-            <img src="proj4images/img3-1.png" alt="taj.jpg">
+            <img src="proj4images/img2-1.png" alt="taj.jpg">
         </div>
         <div class="image-container">
-            <img src="proj4images/img3-3.png" alt="taj_sharp.jpg">
+            <img src="proj4images/img2-2.png" alt="taj_sharp.jpg">
+        </div>
+        </div>
+        <div class="clear-float"></div>
+        <div class="image-grid">
+        <div class="image-container">
+            <img src="proj4images/mask21.png" alt="taj.jpg">
+        </div>
+        <div class="image-container">
+            <img src="proj4images/mask22.png" alt="taj.jpg">
+        </div>
+        <div class="image-container">
+            <img src="proj4images/mask23.png" alt="taj_sharp.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
         <div class="image">
         <div class="image-container">
-        <img src="proj4images/img3_ful.png" alt="taj.jpg">
+        <img src="proj4images/output.png" alt="taj.jpg">
         </div>
         </div>
     </div>
