--- a/project4.html
+++ b/project4.html
@@ -130,7 +130,10 @@
                 <img src="proj4images/img3-3.png" alt="taj_sharp.jpg">
             </div>
             <div class="image-container">
-                <img src="proj4images/mid_tr.png" alt="magnitude.jpg">
+                <img src="proj4images/img2-1.png" alt="magnitude.jpg">
+            </div>
+            <div class="image-container">
+                <img src="proj4images/img2-2.png" alt="magnitude.jpg">
             </div>
         </div>
         <div class="clear-float"></div>
