--- a/project4.html
+++ b/project4.html
@@ -138,7 +138,7 @@
         </div>
         <div class="clear-float"></div>
         <h2>Recover Homographies</h2>
-    <p>To recover homographies, we want to find the projective transformation that transforms coordinates of a point with an augmented coordinate (x, y, 1) to another augmented coordinates with the same center of projection (x', y', w). When scaling factor is 0, we have the following equation:</p>
+    <p>To recover homographies, we want to find the projective transformation that transforms coordinates of a point with an augmented coordinate (x, y, 1) to another augmented coordinates with the same center of projection (x', y', w). When we set the scaling factor to 1, we have the following equation:</p>
     <div class="equation">
         \[
         \begin{bmatrix}
