--- a/project4.html
+++ b/project4.html
@@ -165,7 +165,7 @@
         y' = \frac{dx + ey + f}{gx + hy + 1}
         \]
     </div>
-    <p>We can write the same equations for different corresponding points, if we stack them together:</p>
+    <p>If we multiply both sides by the denominator and keep x' and y' at one side, we would get equations for x' and y' in terms of other variables, including themselves. We can write the same equations for different corresponding points, if we stack them together:</p>
     <div class="equation">
         \[
         \begin{bmatrix}
