--- a/project4.html
+++ b/project4.html
@@ -110,7 +110,7 @@
     <h2>Alp Eren Ozdarendeli</h2>
 
     <div class="Background">
-        <h2>Part A</h2>
+        <h1>Part A</h2>
     </div>
     
     <div class="project-overview">
@@ -298,6 +298,16 @@
         <img src="proj4images/output.png" alt="taj.jpg">
         </div>
         </div>
+    <h1>Part B</h1>
+    <h2>Detecting Corner Features</h2>
+    <h2>Extracting Feature Descriptors</h2>
+    <h2>Matching Feature Descriptors</h2>
+    <h2>Robust method (RANSAC) to Compute Homography</h2>
+    <h2>Produce Mosaics</h2>
+
+
+
+
     </div>
 </body>
 </html>
