--- a/project4.html
+++ b/project4.html
@@ -304,7 +304,16 @@
     <h2>Matching Feature Descriptors</h2>
     <h2>Robust method (RANSAC) to Compute Homography</h2>
     <h2>Produce Mosaics</h2>
-
+        <p>After computing homographies with RANSAC, I ran the same code that I used for part A to produce mosaics for the same 3 pictures. Here are the side-by-side manually and automatically stitched results for these images:</p>
+        <div class="image-gri">
+        <div class="image-container">
+            <img src="proj4images/output.png" alt="taj.jpg">
+        </div>
+        <div class="image-container">
+            <img src="proj4images/img2-1.png" alt="taj_sharp.jpg">
+        </div>
+        </div>
+        <div class="clear-float"></div>
 
 
 
