--- a/project4.html
+++ b/project4.html
@@ -308,15 +308,32 @@
         <div class="image-gri">
         <div class="image-container">
             <img src="proj4images/output.png" alt="taj.jpg">
+            <p class="image-subtitle">Manual Stitching</p>
         </div>
         <div class="image-container">
-            <img src="proj4images/img2-1.png" alt="taj_sharp.jpg">
+            <img src="proj4images/img2_new.png" alt="taj_sharp.jpg">
+            <p class="image-subtitle">Automatic Stitching</p>
+        </div>
+        <div class="image-gri">
+        <div class="image-container">
+            <img src="proj4images/img3_ful.png" alt="taj.jpg">
+            <p class="image-subtitle">Manual Stitching</p>
+        </div>
+        <div class="image-container">
+            <img src="proj4images/image3_new.png" alt="taj_sharp.jpg">
+            <p class="image-subtitle">Automatic Stitching</p>
+        </div>
+        <div class="image-gri">
+        <div class="image-container">
+            <img src="proj4images/mosaic1.png" alt="taj.jpg">
+            <p class="image-subtitle">Manual Stitching</p>
+        </div>
+        <div class="image-container">
+            <img src="proj4images/image1_new.png" alt="taj_sharp.jpg">
+            <p class="image-subtitle">Automatic Stitching</p>
         </div>
         </div>
         <div class="clear-float"></div>
-
-
-
     </div>
 </body>
 </html>
