--- a/project4.html
+++ b/project4.html
@@ -314,6 +314,8 @@
             <img src="proj4images/img2_new.png" alt="taj_sharp.jpg">
             <p class="image-subtitle">Automatic Stitching</p>
         </div>
+        </div>
+        <div class="clear-float"></div>
         <div class="image-gri">
         <div class="image-container">
             <img src="proj4images/img3_ful.png" alt="taj.jpg">
@@ -323,6 +325,8 @@
             <img src="proj4images/image3_new.png" alt="taj_sharp.jpg">
             <p class="image-subtitle">Automatic Stitching</p>
         </div>
+        </div>
+        <div class="clear-float"></div>
         <div class="image-gri">
         <div class="image-container">
             <img src="proj4images/mosaic1.png" alt="taj.jpg">
