--- a/project4.html
+++ b/project4.html
@@ -333,7 +333,7 @@
             <p class="image-subtitle">Manual Stitching</p>
         </div>
         <div class="image-container">
-            <img src="proj4images/image1_new.png" alt="taj_sharp.jpg">
+            <img src="proj4images/deneme.png" alt="taj_sharp.jpg">
             <p class="image-subtitle">Automatic Stitching</p>
         </div>
         </div>
