--- a/project4.html
+++ b/project4.html
@@ -307,22 +307,11 @@
         <p>After computing homographies with RANSAC, I ran the same code that I used for part A to produce mosaics for the same 3 pictures. Here are the side-by-side manually and automatically stitched results for these images:</p>
         <div class="image-gri">
         <div class="image-container">
-            <img src="proj4images/output.png" alt="taj.jpg">
-            <p class="image-subtitle">Manual Stitching</p>
-        </div>
-        <div class="image-container">
-            <img src="proj4images/deneme.png" alt="taj_sharp.jpg">
-            <p class="image-subtitle">Automatic Stitching</p>
-        </div>
-        </div>
-        <div class="clear-float"></div>
-        <div class="image-gri">
-        <div class="image-container">
             <img src="proj4images/img3_ful.png" alt="taj.jpg">
             <p class="image-subtitle">Manual Stitching</p>
         </div>
         <div class="image-container">
-            <img src="proj4images/image3_new.png" alt="taj_sharp.jpg">
+            <img src="proj4images/deneme2.png" alt="taj_sharp.jpg">
             <p class="image-subtitle">Automatic Stitching</p>
         </div>
         </div>
@@ -330,6 +319,17 @@
         <div class="image-gri">
         <div class="image-container">
             <img src="proj4images/mosaic1.png" alt="taj.jpg">
+            <p class="image-subtitle">Manual Stitching</p>
+        </div>
+        <div class="image-container">
+            <img src="proj4images/deneme1.png" alt="taj_sharp.jpg">
+            <p class="image-subtitle">Automatic Stitching</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
+                <div class="image-gri">
+        <div class="image-container">
+            <img src="proj4images/output.png" alt="taj.jpg">
             <p class="image-subtitle">Manual Stitching</p>
         </div>
         <div class="image-container">
