--- a/project4.html
+++ b/project4.html
@@ -329,7 +329,7 @@
         <div class="clear-float"></div>
                 <div class="image-gri">
         <div class="image-container">
-            <img src="proj4images/output.png" alt="taj.jpg">
+            <img src="proj4images/manual2.png" alt="taj.jpg">
             <p class="image-subtitle">Manual Stitching</p>
         </div>
         <div class="image-container">
