--- a/project4.html
+++ b/project4.html
@@ -300,6 +300,7 @@
         </div>
     <h1>Part B</h1>
     <h2>Detecting Corner Features</h2>
+    <p>To detect the corner features, I used the given Harris Point detector. For one of my images, here is the points that Harris Point detector classified as likely to be corner features:</p>
     <h2>Extracting Feature Descriptors</h2>
     <h2>Matching Feature Descriptors</h2>
     <h2>Robust method (RANSAC) to Compute Homography</h2>
