--- a/project4.html
+++ b/project4.html
@@ -295,7 +295,7 @@
         <div class="clear-float"></div>
         <div class="image">
         <div class="image-container">
-        <img src="proj4images/output.png" alt="taj.jpg">
+        <img src="proj4images/manual2.png" alt="taj.jpg">
         </div>
         </div>
     <h1>Part B</h1>
