--- a/project4.html
+++ b/project4.html
@@ -301,6 +301,13 @@
     <h1>Part B</h1>
     <h2>Detecting Corner Features</h2>
     <p>To detect the corner features, I used the given Harris Point detector. For one of my images, here is the points that Harris Point detector classified as likely to be corner features:</p>
+            <div class="image-gr">
+        <div class="image-container">
+            <img src="proj4images/harriscor.png" alt="taj.jpg">
+            <p class="image-subtitle">Manual Stitching</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
     <h2>Extracting Feature Descriptors</h2>
     <h2>Matching Feature Descriptors</h2>
     <h2>Robust method (RANSAC) to Compute Homography</h2>
