--- a/project4.html
+++ b/project4.html
@@ -316,6 +316,16 @@
         </div>
         <div class="clear-float"></div>
     <h2>Matching Feature Descriptors</h2>
+    <p> After identifying the features, now we have to extract feature descriptors. For each feature, we extract 40x40 windows, and downsample to get 8x8 patches. Before this step, low filter Gaussian filter is applied. After getting the patches, each patch is normalized and reshaped to form 64 element feature descriptors for each feature. Here are some examples:</p>
+    <div class="image-gri">
+        <div class="image-container">
+            <img src="proj4images/patch1.png" alt="taj.jpg">
+        </div>
+        <div class="image-container">
+            <img src="proj4images/patch2.png" alt="taj_sharp.jpg">
+        </div>
+        </div>
+        <div class="clear-float"></div>
     <h2>Robust method (RANSAC) to Compute Homography</h2>
     <h2>Produce Mosaics</h2>
         <p>After computing homographies with RANSAC, I ran the same code that I used for part A to produce mosaics for the same 3 pictures. Here are the side-by-side manually and automatically stitched results for these images:</p>
