--- a/project4.html
+++ b/project4.html
@@ -338,6 +338,7 @@
         </div>
         <div class="clear-float"></div>
     <h2>Robust method (RANSAC) to Compute Homography</h2>
+    <p>To further reduce the outliers and inconsistencies, I implement the RANSAC algorithm. </p>
     
     <h2>Produce Mosaics</h2>
         <p>After computing homographies with RANSAC, I ran the same code that I used for part A to produce mosaics for the same 3 pictures. Here are the side-by-side manually and automatically stitched results for these images:</p>
