--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
     <a href="project2.html" class="project-link">Project 2: Fun with Filters and Frequencies!</a>
     <a href="project3.html" class="project-link">Project 3: Face Morphing</a>
     <a href="project4.html" class="project-link">Project 4: Image Warping and Mosaicing</a>
+    <a href="project5.html" class="project-link">Project 5: Fun With Diffusion Models!</a>
 </body>
 </html>
