--- a/project5.html
+++ b/project5.html
@@ -106,7 +106,7 @@
     </style>
 </head>
 <body>
-    <h1>Project 4: Image Warping and Mosaicing</h1>
+    <h1>Project 5: Fun With Diffusion Models!</h1>
     <h2>Alp Eren Ozdarendeli</h2>
 
     <div class="Background">
