--- a/project5.html
+++ b/project5.html
@@ -298,8 +298,8 @@
         <img src="proj4images/manual2.png" alt="taj.jpg">
         </div>
         </div>
-    <h1>Part B</h1>
-    <h2>Detecting Corner Features</h2>
+    <h1>Part B: Diffusion Models from Scratch</h1>
+    <h2>Training a Single-Step Denoising UNet</h2>
     <p>To detect the corner features, I used the given Harris Point detector. For one of my images, here is the points that Harris Point detector classified as likely to be corner features:</p>
             <div class="image-gr">
         <div class="image-container">
