--- a/project5.html
+++ b/project5.html
@@ -300,7 +300,7 @@
         </div>
     <h1>Part B: Diffusion Models from Scratch</h1>
     <h2>Training a Single-Step Denoising UNet</h2>
-    <p>To detect the corner features, I used the given Harris Point detector. For one of my images, here is the points that Harris Point detector classified as likely to be corner features:</p>
+    <p>For the second part of the project, I implement diffusion models from scratch. As a first step, I train single-sept denoising UNet. Firstly, I follow the model diagram for UNet to define its architecture. </p>
             <div class="image-gr">
         <div class="image-container">
             <img src="proj4images/harris.png" alt="taj.jpg">
