--- a/project5.html
+++ b/project5.html
@@ -114,8 +114,9 @@
     </div>
     
     <div class="project-overview">
-        <h2>Shoot the Pictures</h2>
-            <p> Here are the pictures I used for this project: </p>
+        <h2>Part 0: Setup</h2>
+            <p> For the setup part, I use DeepFloyd IF as the diffusion model. To test the setup, I used the given prompts to generate the following outputs:
+            <p> The generated images actually represent the prompts pretty well. To test the effect of num_inference_steps on the outputs, I test the prompt 'a man wearing a hat' with num_inference_steps 7 and 46 in addition to 20 given above. Here are outputs with num_inference_steps 7 and 46 respectively:<p>
             <div class="image-gri">
             <div class="image-container">
                 <img src="proj4images/IMG_5854.png" alt="taj.jpg">
