--- a/project5.html
+++ b/project5.html
@@ -116,25 +116,19 @@
     <div class="project-overview">
         <h2>Part 0: Setup</h2>
             <p> For the setup part, I use DeepFloyd IF as the diffusion model. To test the setup, I used the given prompts to generate the following outputs:
+                        <div class="image-gri">
+            <div class="image-container">
+                <img src="images5/parta1_1.png" alt="taj.jpg">
+            </div>
+        </div>
+        <div class="clear-float"></div>
             <p> The generated images actually represent the prompts pretty well. To test the effect of num_inference_steps on the outputs, I test the prompt 'a man wearing a hat' with num_inference_steps 7 and 46 in addition to 20 given above. Here are outputs with num_inference_steps 7 and 46 respectively:<p>
             <div class="image-gri">
             <div class="image-container">
-                <img src="proj4images/IMG_5854.png" alt="taj.jpg">
+                <img src="images5/parta1_2.png" alt="taj.jpg">
             </div>
             <div class="image-container">
-                <img src="proj4images/IMG_5855.png" alt="taj_sharp.jpg">
-            </div>
-            <div class="image-container">
-                <img src="proj4images/img3-1.png" alt="taj.jpg">
-            </div>
-            <div class="image-container">
-                <img src="proj4images/img3-3.png" alt="taj_sharp.jpg">
-            </div>
-            <div class="image-container">
-                <img src="proj4images/img2-2.png" alt="magnitude.jpg">
-            </div>
-            <div class="image-container">
-                <img src="proj4images/img2-1.png" alt="magnitude.jpg">
+                <img src="images5/parta1_3.png" alt="taj_sharp.jpg">
             </div>
         </div>
         <div class="clear-float"></div>
@@ -304,31 +298,31 @@
     <p>For the second part of the project, I implement diffusion models from scratch. As a first step, I train single-sept denoising UNet. Firstly, I follow the model diagram for UNet to define its architecture. To train a denoiser with UNet, I use the image dataset from MNIST. Given a clean image, I add a random noise with sigma coefficient to create a noised image. Here are examples of noised images with different sigmas: </p>
     <div class="image-gr">
         <div class="image-container">
-            <img src="proj5images/partbimage4.png" alt="taj.jpg">
+            <img src="images5/partbimage4.png" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
     <p> I train UNet to minimize the loss between denoised image from UNet given the noised image and the original clean image. Here are the sample results after training for 1 and 5 epochs:</p>
     <div class="image-gri">
         <div class="image-container">
-            <img src="proj5images/partbimage1.png" alt="taj.jpg">
+            <img src="images5/partbimage1.png" alt="taj.jpg">
         </div>
         <div class="image-container">
-            <img src="proj5images/partbimage2" alt="taj_sharp.jpg">
+            <img src="images5/partbimage2" alt="taj_sharp.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
     <p> In the training, I train the model for sigma = 0.5. Let's test how well it will perform for other sigma values:</p>
         <div class="image-gr">
         <div class="image-container">
-            <img src="proj5images/partbimage3.png" alt="taj.jpg">
+            <img src="images5/partbimage3.png" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
     <p>Here is the training loss curve during the whole training process:</p>
     <div class="image-gr">
         <div class="image-container">
-            <img src="proj5images/partbimage5.png" alt="taj.jpg">
+            <img src="images5/partbimage5.png" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
