--- a/project5.html
+++ b/project5.html
@@ -116,9 +116,15 @@
     <div class="project-overview">
         <h2>Part 0: Setup</h2>
             <p> For the setup part, I use DeepFloyd IF as the diffusion model. To test the setup, I used the given prompts to generate the following outputs:
-                        <div class="image-gri">
+        <div class="image-gri">
             <div class="image-container">
                 <img src="images5/parta1_1.png" alt="taj.jpg">
+            </div>
+            <div class="image-container">
+                <img src="images5/parta1_4.png" alt="taj.jpg">
+            </div>
+            <div class="image-container">
+                <img src="images5/parta1_5.png" alt="taj.jpg">
             </div>
         </div>
         <div class="clear-float"></div>
