--- a/project5.html
+++ b/project5.html
@@ -119,22 +119,27 @@
         <div class="image-gri">
             <div class="image-container">
                 <img src="images5/parta1_1.png" alt="taj.jpg">
+                <p class="image-subtitle"> an oil painting of a snowy mountain village</p>
             </div>
             <div class="image-container">
                 <img src="images5/parta1_4.png" alt="taj.jpg">
+                <p class="image-subtitle"> a man wearing a hat</p>
             </div>
             <div class="image-container">
                 <img src="images5/parta1_5.png" alt="taj.jpg">
+                <p class="image-subtitle"> a rocket ship</p>
             </div>
         </div>
         <div class="clear-float"></div>
-            <p> The generated images actually represent the prompts pretty well. To test the effect of num_inference_steps on the outputs, I test the prompt 'a man wearing a hat' with num_inference_steps 7 and 46 in addition to 20 given above. Here are outputs with num_inference_steps 7 and 46 respectively:<p>
+            <p> The generated images actually represent the prompts pretty well. To test the effect of num_inference_steps on the outputs, I test the prompt 'an oil painting of a snowy mountain village' with num_inference_steps 7 and 46 in addition to 20 given above. Here are outputs with num_inference_steps 7 and 46 respectively:<p>
             <div class="image-gri">
             <div class="image-container">
                 <img src="images5/parta1_2.png" alt="taj.jpg">
+                <p class="image-subtitle"> an oil painting of a snowy mountain village (num_inference_steps = 7)</p>
             </div>
             <div class="image-container">
                 <img src="images5/parta1_3.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">an oil painting of a snowy mountain village (num_inference_steps = 46)</p>
             </div>
         </div>
         <div class="clear-float"></div>
