--- a/project5.html
+++ b/project5.html
@@ -116,7 +116,7 @@
     <div class="project-overview">
         <h2>Part 0: Setup</h2>
             <p> For the setup part, I use DeepFloyd IF as the diffusion model. To test the setup, I used the given prompts to generate the following outputs:
-        <div class="image-gri">
+        <div class="image-grid">
             <div class="image-container">
                 <img src="images5/parta1_1.png" alt="taj.jpg">
                 <p class="image-subtitle"> an oil painting of a snowy mountain village</p>
