--- a/project5.html
+++ b/project5.html
@@ -143,6 +143,7 @@
             </div>
         </div>
         <div class="clear-float"></div>
+        <p>With increasing num_inference_steps, the images become more detailed and better reflect the prompts.</p>
         <h2>Recover Homographies</h2>
     <p>To recover homographies, we want to find the projective transformation that transforms coordinates of a point with an augmented coordinate (x, y, 1) to another augmented coordinates with the same center of projection (x', y', w). When we set the scaling factor to 1, we have the following equation:</p>
     <div class="equation">
