--- a/project5.html
+++ b/project5.html
@@ -143,9 +143,24 @@
             </div>
         </div>
         <div class="clear-float"></div>
-        <h2>1.1 Implementing the Forward Process</h2>
-
         <p>With increasing num_inference_steps, the images become more detailed and better reflect the prompts.</p>
+        <h2>1.1 Implementing the Forward Process</h2>
+        <p>Now, I implement the forward process. For the forward process, given a clean image, I get a noisy image for a timestep t by sampling noise from a Gaussian. Also, I scale the image to 64 x 64 dimensions. The original Campanile image is shown below at different noise levels.<p>
+        <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/noise1.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=250</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/noise2.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=500</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/noise3.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=750</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
         <h2>Recover Homographies</h2>
     <p>To recover homographies, we want to find the projective transformation that transforms coordinates of a point with an augmented coordinate (x, y, 1) to another augmented coordinates with the same center of projection (x', y', w). When we set the scaling factor to 1, we have the following equation:</p>
     <div class="equation">
