--- a/project5.html
+++ b/project5.html
@@ -161,6 +161,23 @@
             </div>
         </div>
         <div class="clear-float"></div>
+                <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/cdns1.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Classical Denoised Campanile at t=250</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/cdns2.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Classical Denoised Campanile at t=500</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/cdns.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Classical Denoised Campanile at t=750</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
+        <h2>1.2 Classical Denoising</h2>
+<p>For classical denoisingm I take a noisy image and try to denoise it by Gaussian filtering. Here are the results for different timestamps:</p>
         <h2>Recover Homographies</h2>
     <p>To recover homographies, we want to find the projective transformation that transforms coordinates of a point with an augmented coordinate (x, y, 1) to another augmented coordinates with the same center of projection (x', y', w). When we set the scaling factor to 1, we have the following equation:</p>
     <div class="equation">
